<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000000">


<ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/texta1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/this_application_is_made_possible_by_libavif"
                android:textColor="#FFFFFF"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/texta"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/released_under_bsd"
                android:textColor="#FFFFFF"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:autoLink="web"
                android:text="@string/libavif_link" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:background="#E1E1E1"
                android:textColor="#000000"
                android:text="@string/bsd_libavif" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="30dp" />

            <TextView
                android:id="@+id/texta3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/this_application_is_made_possible_by_aom"
                android:textColor="#FFFFFF"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/textView7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autoLink="web"
                android:text="@string/aom_link" />

            <TextView
                android:id="@+id/textView8"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:background="#E1E1E1"
                android:text="@string/lis_aom"
                android:textColor="#000000" />

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>